Fixed spacing for year list that grows to two rows

--- a/root/static/css/pack.css
+++ b/root/static/css/pack.css
@@ -87,12 +87,14 @@
 #years, .pager {
 	overflow: auto;
 	padding-bottom: 8px;
+	margin-top: 8px;
 }
 
 #years li, .pager span {
 	float: left;
 	margin-right: 8px;
 	background: #ababab;
+	margin-bottom: 8px;
 }
 
 #years li a, .pager span a {
